# crmt_feb

./: .gitignore  FixROOT.py  README.md  rate.py  struck.csv  view_me.py  viewer_methods.py
CROOT_spe_fitting/: main.cxx
misc_scripts/: angle.py  cos_log.py  ps.py
misc_scripts/CROOT_spe_fitting/: 800HV_3.07V_-20.7mV_trigg.txt  900_F1spe00009007.txt  Makefile  adc_750VHV_3.07Vled_2.txt  adc_850VHV_3.07Vled_2.txt  dstyle.h  fit  main.cxx
misc_scripts/muon_angle_distribution/: angle.C  angle.eps  other_methods.py  plot_me.py
misc_scripts/muon_rate/: README.md  other_methods.py  rate.eps  rate.py
muon_angle_distribution/: angle.eps  plot_me.py
muon_rate/: III-result.root  rate.py
pins_to_display/: vics_list.txt  vics_list.txt_154  view_me.py  viewer_methods.py
pins_to_display_recon/: FixROOT.py  README.md  display_methods.py  fit_methods.py  fx_methods.py  pins.txt  tracks.txt  view_me.py  viewer_methods.py
recon/: CMakeLists.txt  FindROOT.cmake  Makefile  Reco  RecoModule.cxx  RecoModule.h  UseIt.cxx  event_list.txt  file_handler.h  pins.csv  pins.txt  recodata.root  recoinit.h  recon.cxx  recon.exectuable  struck.csv  tracks.txt  unused.emacs
recon/include/: Fiber.h  FileManager.h  RecoModule.h  Track.h
recon/old/: Makefile
recon/src/: Fiber.cxx  Fiber.h  FileManager.cxx  FileManager.h  Geometry.cxx  Geometry.h  Makefile  ParameterSpace.cxx  ParameterSpace.h  Reco  RecoModule.cxx  RecoModule.h  Track.cxx  Track.h  event_list.txt  pins.csv  test_reco.cxx
recon/viewer/: view_me.py
recon/viewer/methods/: fit_methods.py  other_methods.py
recon_full/: CMakeLists.txt
recon_full/include/: Detector.h  Fiber.h  FileManager.h  Geometry.h  Line.h  ParameterSpace.h  RecoModule.h  Track.h  VStyle.h  Viewer.h
recon_full/input/: event_list2.txt  one.txt  pins.csv
recon_full/scripts/: angles.py  event_to_coincidence.py
recon_full/src/: Detector.cxx  Fiber.cxx  FileManager.cxx  Geometry.cxx  Line.cxx  RecoModule.cxx  Track.cxx  Viewer.cxx  test_reco.cxx
recon_full/viewer/methods/: fx_methods.py
single_pe/: F1spe00003.txt  adc_750VHV_3.07Vled.txt  data.dat_bak  fit.py  fit_methods.py  other_methods.py
single_pe/croot/: Makefile  adc_800VHV_3.07Vled_2.txt  fit  gain_all.py  gain_single_set.py  histograms.py  histograms_2.py  main.cxx  methods.py
single_pe/croot/110813/: 850_F1spe000086.txt  adc_900VHV_3.07Vled_2.txt
single_pe/croot/111113/: 800V_15.5mV_threshold_set_2.txt  800V_18.5mV_threshold_set_2.txt  800V_19.5mV_threshold_set_2.txt
single_pe/croot/111213/: 750V_08.0mV_threshold.txt  750V_09.0mV_threshold.txt  750V_10.0mV_threshold.txt  750V_11.0mV_threshold.txt  750V_12.0mV_threshold.txt
single_pe/croot/data/: 700V_5.25mV_threshold.txt  (+33 more)
single_pe/python/: fit.py  fit_methods.py
(+300 files in other folders)
